--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   introduction_screen: ^2.1.0
   google_fonts: ^2.1.0
+  step_progress_indicator: ^1.0.1
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
