--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^2.1.0
   step_progress_indicator: ^1.0.1
   rxdart: ^0.27.1
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
